--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
